major layout fix on home screen to eliminate overflow issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,8 @@ div #layout {
 #layout nav {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
 #layout a {
@@ -66,7 +68,8 @@ div.overflow {
   flex-direction: column;
   align-items: flex-start;
   overflow:scroll;
-  height: 300px;
+  /* min-height: calc(~"100vh - 100") */
+  /* height: 45vh; */
   width: 100%;
 }
 
