--- a/client/src/layouts/Layout.css
+++ b/client/src/layouts/Layout.css
@@ -46,4 +46,6 @@ div #layout {
     justify-content: flex-start;
     align-items: flex-start;
     padding: 30px;
+    height: 100vh;
+    box-sizing: border-box;
 }
